erDiagram
    Entity01 {
        integer attr1_01
        text attr2_01
    }
    Entity02 {
        integer attr1_02
        text attr2_02
    }
    Entity03 {
        integer attr1_03
        text attr2_03
    }
    Entity04 {
        integer attr1_04
        text attr2_04
    }
    Entity05 {
        integer attr1_05
        text attr2_05
    }
    Entity06 {
        integer attr1_06
        text attr2_06
    }
    Entity07 {
        integer attr1_07
        text attr2_07
    }
    Entity08 {
        integer attr1_08
        text attr2_08
    }
    Entity09 {
        integer attr1_09
        text attr2_09
    }
    Entity10 {
        integer attr1_10
        text attr2_10
    }
    Entity11 {
        integer attr1_11
        text attr2_11
    }
    Entity12 {
        integer attr1_12
        text attr2_12
    }
    Entity13 {
        integer attr1_13
        text attr2_13
    }
    Entity14 {
        integer attr1_14
        text attr2_14
    }
    Entity15 {
        integer attr1_15
        text attr2_15
    }
    Entity16 {
        integer attr1_16
        text attr2_16
    }
    Entity17 {
        integer attr1_17
        text attr2_17
    }
    Entity18 {
        integer attr1_18
        text attr2_18
    }
    Entity19 {
        integer attr1_19
        text attr2_19
    }
    Entity20 {
        integer attr1_20
        text attr2_20
    }
    Entity21 {
        integer attr1_21
        text attr2_21
    }
    Entity22 {
        integer attr1_22
        text attr2_22
    }
    Entity23 {
        integer attr1_23
        text attr2_23
    }
    Entity24 {
        integer attr1_24
        text attr2_24
    }
    Entity25 {
        integer attr1_25
        text attr2_25
    }
    Entity26 {
        integer attr1_26
        text attr2_26
    }
    Entity27 {
        integer attr1_27
        text attr2_27
    }
    Entity28 {
        integer attr1_28
        text attr2_28
    }
    Entity29 {
        integer attr1_29
        text attr2_29
    }
    Entity30 {
        integer attr1_30
        text attr2_30
    }
    Entity31 {
        integer attr1_31
        text attr2_31
    }
    Entity32 {
        integer attr1_32
        text attr2_32
    }
    Entity33 {
        integer attr1_33
        text attr2_33
    }
    Entity34 {
        integer attr1_34
        text attr2_34
    }
    Entity35 {
        integer attr1_35
        text attr2_35
    }
    Entity36 {
        integer attr1_36
        text attr2_36
    }
    Entity37 {
        integer attr1_37
        text attr2_37
    }
    Entity38 {
        integer attr1_38
        text attr2_38
    }
    Entity39 {
        integer attr1_39
        text attr2_39
    }
    Entity40 {
        integer attr1_40
        text attr2_40
    }
    Entity41 {
        integer attr1_41
        text attr2_41
    }
    Entity42 {
        integer attr1_42
        text attr2_42
    }
    Entity43 {
        integer attr1_43
        text attr2_43
    }
    Entity44 {
        integer attr1_44
        text attr2_44
    }
    Entity45 {
        integer attr1_45
        text attr2_45
    }
    Entity46 {
        integer attr1_46
        text attr2_46
    }
    Entity47 {
        integer attr1_47
        text attr2_47
    }
    Entity48 {
        integer attr1_48
        text attr2_48
    }
    Entity49 {
        integer attr1_49
        text attr2_49
    }
    Entity50 {
        integer attr1_50
        text attr2_50
    }
    Entity01 ||--o{ Entity02 : "has many"
    Entity02 ||--o{ Entity03 : "has many"
    Entity03 ||--o{ Entity04 : "has many"
    Entity04 ||--o{ Entity05 : "has many"
    Entity05 ||--o{ Entity06 : "has many"
    Entity06 ||--o{ Entity07 : "has many"
    Entity07 ||--o{ Entity08 : "has many"
    Entity08 ||--o{ Entity09 : "has many"
    Entity09 ||--o{ Entity10 : "has many"
    Entity10 ||--o{ Entity11 : "has many"
    Entity11 ||--o{ Entity12 : "has many"
    Entity12 ||--o{ Entity13 : "has many"
    Entity13 ||--o{ Entity14 : "has many"
    Entity14 ||--o{ Entity15 : "has many"
    Entity15 ||--o{ Entity16 : "has many"
    Entity16 ||--o{ Entity17 : "has many"
    Entity17 ||--o{ Entity18 : "has many"
    Entity18 ||--o{ Entity19 : "has many"
    Entity19 ||--o{ Entity20 : "has many"
    Entity20 ||--o{ Entity21 : "has many"
    Entity21 ||--o{ Entity22 : "has many"
    Entity22 ||--o{ Entity23 : "has many"
    Entity23 ||--o{ Entity24 : "has many"
    Entity24 ||--o{ Entity25 : "has many"
    Entity25 ||--o{ Entity26 : "has many"
    Entity26 ||--o{ Entity27 : "has many"
    Entity27 ||--o{ Entity28 : "has many"
    Entity28 ||--o{ Entity29 : "has many"
    Entity29 ||--o{ Entity30 : "has many"
    Entity30 ||--o{ Entity31 : "has many"
    Entity31 ||--o{ Entity32 : "has many"
    Entity32 ||--o{ Entity33 : "has many"
    Entity33 ||--o{ Entity34 : "has many"
    Entity34 ||--o{ Entity35 : "has many"
    Entity35 ||--o{ Entity36 : "has many"
    Entity36 ||--o{ Entity37 : "has many"
    Entity37 ||--o{ Entity38 : "has many"
    Entity38 ||--o{ Entity39 : "has many"
    Entity39 ||--o{ Entity40 : "has many"
    Entity40 ||--o{ Entity41 : "has many"
    Entity41 ||--o{ Entity42 : "has many"
    Entity42 ||--o{ Entity43 : "has many"
    Entity43 ||--o{ Entity44 : "has many"
    Entity44 ||--o{ Entity45 : "has many"
    Entity45 ||--o{ Entity46 : "has many"
    Entity46 ||--o{ Entity47 : "has many"
    Entity47 ||--o{ Entity48 : "has many"
    Entity48 ||--o{ Entity49 : "has many"
    Entity49 ||--o{ Entity50 : "has many"
    Entity50 ||--o{ Entity51 : "has many"